--- a/_2-Application/pom.xml
+++ b/_2-Application/pom.xml
@@ -22,6 +22,10 @@
             <artifactId>_3-Domain</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
